--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@sailshq/socket.io-redis": "^5.2.0",
     "bcrypt": "^5.1.0",
     "cookie-session": "^2.0.0",
+    "dotenv": "^16.3.1",
     "grunt": "1.0.4",
     "sails": "^1.5.4",
     "sails-hook-grunt": "^5.0.0",
